--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,30 @@
             </div>
         </header>
         <main class="main">
-            main
+            <section class="promo">
+                <div class="container">
+                    <div class="top-slider">
+                        <div class="top-slider__item">
+                            <h1 class="top-slider__title">
+                                МЫСЛИ
+                                ГЛОБАЛЬНО
+                            </h1>
+                        </div>
+                        <div class="top-slider__item">
+                            <h1 class="top-slider__title">
+                                МЫСЛИ
+                                ГЛОБАЛЬНО
+                            </h1>
+                        </div>
+                        <div class="top-slider__item">
+                            <h1 class="top-slider__title">
+                                МЫСЛИ
+                                ГЛОБАЛЬНО
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             footer
