--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Di Gi</title>
 </head>
@@ -46,7 +45,7 @@
                                 ГЛОБАЛЬНО
                             </h1>
                         </div>
-                    </div>
+                    </div>         
                 </div>
             </section>
         </main>
@@ -54,6 +53,9 @@
             footer
         </footer>
     </div>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="libs/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
