add promo and responsive for promo section

--- a/src/index.html
+++ b/src/index.html
@@ -25,28 +25,50 @@
         </header>
         <main class="main">
             <section class="promo">
-                <div class="container">
                     <div class="top-slider">
                         <div class="top-slider__item">
                             <h1 class="top-slider__title">
                                 МЫСЛИ
                                 ГЛОБАЛЬНО
                             </h1>
+                            <div class="top-slider__descr">
+                                Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
+                            </div>
+                            <div class="top-slider__btnWrapper">
+                                <button class="top-slider__btn">
+                                    ПОДРОБНЕЕ
+                                </button>
+                            </div>
                         </div>
                         <div class="top-slider__item">
                             <h1 class="top-slider__title">
                                 МЫСЛИ
                                 ГЛОБАЛЬНО
                             </h1>
+                            <div class="top-slider__descr">
+                                Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
+                            </div>
+                            <div class="top-slider__btnWrapper">
+                                <button class="top-slider__btn">
+                                    ПОДРОБНЕЕ
+                                </button>
+                            </div>
                         </div>
                         <div class="top-slider__item">
                             <h1 class="top-slider__title">
                                 МЫСЛИ
                                 ГЛОБАЛЬНО
                             </h1>
+                            <div class="top-slider__descr">
+                                Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
+                            </div>
+                            <div class="top-slider__btnWrapper">
+                                <button class="top-slider__btn">
+                                    ПОДРОБНЕЕ
+                                </button>
+                            </div>
                         </div>
                     </div>         
-                </div>
             </section>
         </main>
         <footer class="footer">
@@ -54,7 +76,7 @@
         </footer>
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
     <script src="libs/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
