add and adaptive call section

--- a/src/index.html
+++ b/src/index.html
@@ -70,13 +70,32 @@
                         </div>
                     </div>         
             </section>
+            <section class="call">
+                <div class="container">
+                    <div class="call__wrapper">
+                        <div class="call__text">
+                            <h5 class="call__title">
+                                Вы полюбите нас 
+                                с первой встречи!
+                            </h5>
+                            <div class="call__descr">
+                                Мы предоставляем комплексный 
+                                подход к продвижению компании, 
+                                продуктов и услуг в цифровой сфере.
+                            </div>
+                        </div>
+                        <button class="call__btn">
+                            ПЕРЕЗВОНИТЕ МНЕ
+                        </button>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             footer
         </footer>
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
     <script src="libs/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
