add services section

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
             <section class="promo">
                     <div class="top-slider">
                         <div class="top-slider__item">
-                            <h1 class="top-slider__title">
+                            <h5 class="top-slider__title">
                                 МЫСЛИ
                                 ГЛОБАЛЬНО
-                            </h1>
+                            </h5>
                             <div class="top-slider__descr">
                                 Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
                             </div>
@@ -41,10 +41,10 @@
                             </div>
                         </div>
                         <div class="top-slider__item">
-                            <h1 class="top-slider__title">
+                            <h5 class="top-slider__title">
                                 МЫСЛИ
                                 ГЛОБАЛЬНО
-                            </h1>
+                            </h5>
                             <div class="top-slider__descr">
                                 Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
                             </div>
@@ -55,10 +55,10 @@
                             </div>
                         </div>
                         <div class="top-slider__item">
-                            <h1 class="top-slider__title">
+                            <h5 class="top-slider__title">
                                 МЫСЛИ
                                 ГЛОБАЛЬНО
-                            </h1>
+                            </h5>
                             <div class="top-slider__descr">
                                 Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
                             </div>
@@ -74,10 +74,10 @@
                 <div class="container">
                     <div class="call__wrapper">
                         <div class="call__text">
-                            <h5 class="call__title">
+                            <h1 class="call__title">
                                 Вы полюбите нас 
                                 с первой встречи!
-                            </h5>
+                            </h1>
                             <div class="call__descr">
                                 Мы предоставляем комплексный 
                                 подход к продвижению компании, 
@@ -87,6 +87,134 @@
                         <button class="call__btn">
                             ПЕРЕЗВОНИТЕ МНЕ
                         </button>
+                    </div>
+                </div>
+            </section>
+            <section class="services">
+                <div class="container">
+                    <div class="services__wrapper">
+                        <div class="services__text">
+                            <h2 class="services__title title">
+                                Сервис
+                            </h2>
+                            <div class="services__subtitle">
+                                От идеи до незабываемого и
+                                измеримого результата.
+                            </div>
+                            <div class="services__descr">
+                                Интеграция безупречного 
+                                производства, передовых технологий
+                                и тщательного измерения 
+                                производительности
+                            </div>
+                        </div>
+                        <div class="services__items">
+                            <div class="services__item">
+                                <div class="services__item-inner">
+                                    <img src="icons/advantages/flag.svg" alt="flag" class="services__item-icons">
+                                    <div class="services__name">
+                                        СТРАТЕГИЯ
+                                    </div>
+                                    <div class="services__item-text">
+                                        Создадим уникальный и 
+                                        удобный дизайн.
+                                    </div>
+                                    <a href="#" class="services__item-link">ПОДРОБНЕЕ →</a>
+                                </div>
+                            </div>
+                            <div class="services__item">
+                                <div class="services__item-inner">
+                                    <img src="icons/advantages/analys.svg" alt="analys" class="services__item-icons">
+                                    <div class="services__name">
+                                        АНАЛИЗ
+                                    </div>
+                                    <div class="services__item-text">
+                                        Создадим уникальный и 
+                                        удобный дизайн.
+                                    </div>
+                                    <a href="#" class="services__item-link">ПОДРОБНЕЕ →</a>
+                                </div>
+                            </div>
+                            <div class="services__item">
+                                <div class="services__item-inner">
+                                        <img src="icons/advantages/socials.svg" alt="socials" class="services__item-icons">
+                                    <div class="services__name">
+                                        СОЦ СЕТИ
+                                    </div>
+                                    <div class="services__item-text">
+                                        Создадим уникальный и 
+                                        удобный дизайн.
+                                    </div>
+                                    <a href="#" class="services__item-link">ПОДРОБНЕЕ →</a>
+                                </div>
+                            </div>
+                            <div class="services__item">
+                                <div class="services__item-inner">
+                                    <img src="icons/advantages/tags.svg" alt="tags" class="services__item-icons">
+                                    <div class="services__name">
+                                        РАЗВИТИЕ
+                                    </div>
+                                    <div class="services__item-text">
+                                        Создадим уникальный и 
+                                        удобный дизайн.
+                                    </div>
+                                    <a href="#" class="services__item-link">ПОДРОБНЕЕ →</a>
+                                </div>
+                            </div>
+                                <div class="services__item">
+                                <div class="services__item-inner">
+                                    <img src="icons/advantages/contents.svg" alt="content" class="services__item-icons">
+                                    <div class="services__name">
+                                        КОНТЕНТ
+                                    </div>
+                                    <div class="services__item-text">
+                                        Создадим уникальный и 
+                                        удобный дизайн.
+                                    </div>
+                                    <a href="#" class="services__item-link">ПОДРОБНЕЕ →</a>
+                                </div>
+                            </div>
+                            <div class="services__item">
+                                <div class="services__item-inner">
+                                    <img src="icons/advantages/idea.svg" alt="idea" class="services__item-icons">
+                                    <div class="services__name">
+                                        ДИЗАЙН UX
+                                    </div>
+                                    <div class="services__item-text">
+                                        Создадим уникальный и 
+                                        удобный дизайн.
+                                    </div>
+                                    <a href="#" class="services__item-link">ПОДРОБНЕЕ →</a>
+                                </div>
+                            </div>
+                            <div class="services__item">
+                                <div class="services__item-inner">
+                                    <img src="icons/advantages/coin.svg" alt="coin" class="services__item-icons">
+                                    <div class="services__name">
+                                        ТАРГЕТИРОВАННАЯ 
+                                        РЕКЛАМА
+                                    </div>
+                                    <div class="services__item-text">
+                                        Создадим уникальный и 
+                                        удобный дизайн.
+                                    </div>
+                                    <a href="#" class="services__item-link">ПОДРОБНЕЕ →</a>
+                                </div>
+                            </div>
+                            <div class="services__item">
+                                <div class="services__item-inner">
+                                    <img src="icons/advantages/product.svg" alt="product" class="services__item-icons">
+                                    <div class="services__name">
+                                        ПРОДУКТ
+                                    </div>
+                                    <div class="services__item-text">
+                                        Создадим уникальный и 
+                                        удобный дизайн.
+                                    </div>
+                                    <a href="#" class="services__item-link">ПОДРОБНЕЕ →</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
