adaptive services section for 640px and 768px

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                             <div class="services__item">
                                 <div class="services__item-inner">
                                     <img src="icons/advantages/flag.svg" alt="flag" class="services__item-icons">
-                                    <div class="services__name">
+                                    <div class="services__item-name">
                                         СТРАТЕГИЯ
                                     </div>
                                     <div class="services__item-text">
@@ -125,7 +125,7 @@
                             <div class="services__item">
                                 <div class="services__item-inner">
                                     <img src="icons/advantages/analys.svg" alt="analys" class="services__item-icons">
-                                    <div class="services__name">
+                                    <div class="services__item-name">
                                         АНАЛИЗ
                                     </div>
                                     <div class="services__item-text">
@@ -138,7 +138,7 @@
                             <div class="services__item">
                                 <div class="services__item-inner">
                                         <img src="icons/advantages/socials.svg" alt="socials" class="services__item-icons">
-                                    <div class="services__name">
+                                    <div class="services__item-name">
                                         СОЦ СЕТИ
                                     </div>
                                     <div class="services__item-text">
@@ -151,7 +151,7 @@
                             <div class="services__item">
                                 <div class="services__item-inner">
                                     <img src="icons/advantages/tags.svg" alt="tags" class="services__item-icons">
-                                    <div class="services__name">
+                                    <div class="services__item-name">
                                         РАЗВИТИЕ
                                     </div>
                                     <div class="services__item-text">
@@ -164,7 +164,7 @@
                                 <div class="services__item">
                                 <div class="services__item-inner">
                                     <img src="icons/advantages/contents.svg" alt="content" class="services__item-icons">
-                                    <div class="services__name">
+                                    <div class="services__item-name">
                                         КОНТЕНТ
                                     </div>
                                     <div class="services__item-text">
@@ -177,7 +177,7 @@
                             <div class="services__item">
                                 <div class="services__item-inner">
                                     <img src="icons/advantages/idea.svg" alt="idea" class="services__item-icons">
-                                    <div class="services__name">
+                                    <div class="services__item-name">
                                         ДИЗАЙН UX
                                     </div>
                                     <div class="services__item-text">
@@ -190,7 +190,7 @@
                             <div class="services__item">
                                 <div class="services__item-inner">
                                     <img src="icons/advantages/coin.svg" alt="coin" class="services__item-icons">
-                                    <div class="services__name">
+                                    <div class="services__item-name">
                                         ТАРГЕТИРОВАННАЯ 
                                         РЕКЛАМА
                                     </div>
@@ -204,7 +204,7 @@
                             <div class="services__item">
                                 <div class="services__item-inner">
                                     <img src="icons/advantages/product.svg" alt="product" class="services__item-icons">
-                                    <div class="services__name">
+                                    <div class="services__item-name">
                                         ПРОДУКТ
                                     </div>
                                     <div class="services__item-text">
