--- a/src/index.html
+++ b/src/index.html
@@ -218,6 +218,97 @@
                     </div>
                 </div>
             </section>
+            <section class="projects">
+                <h2 class="projects__title">
+                    Наши Проекты
+                </h2>
+                <div class="projects__items">
+                    <div class="projects__item">
+                        <div class="projects__item-img" style="background-image: url(img/projects/lalique.jpg);">
+                            <div class="projects__item-inner">
+                                <a href="#" class="projects__item-info">
+                                    <img src="icons/info/info.svg" alt="info">
+                                </a>
+                                <a href="#" class="projects__search-info">
+                                    <img src="icons/info/search.svg" alt="zoom">
+                                </a>
+                            </div>
+                        </div>
+                        <a href="#" class="projects__item-link">
+                            Lalique бутик
+                        </a>
+                    </div>
+                    <div class="projects__item">
+                        <div class="projects__item-img" style="background-image: url(img/projects/house.jpg);">
+                            <div class="projects__item-inner">
+                                <a href="#" class="projects__item-info">
+                                    <img src="icons/info/info.svg" alt="info">
+                                </a>
+                                <a href="#" class="projects__search-info">
+                                    <img src="icons/info/search.svg" alt="zoom">
+                                </a>
+                            </div>
+                        </div>
+                        <a href="#" class="projects__item-link">
+                            Строительство домов
+                        </a>
+                    </div>
+                    <div class="projects__item">
+                        <div class="projects__item-img" style="background-image: url(img/projects/coffe.jpg);">
+                            <div class="projects__item-inner">
+                                <a href="#" class="projects__item-info">
+                                    <img src="icons/info/info.svg" alt="info">
+                                </a>
+                                <a href="#" class="projects__search-info">
+                                    <img src="icons/info/search.svg" alt="zoom">
+                                </a>
+                            </div>
+                        </div>
+                        <a href="#" class="projects__item-link">
+                            Кофейня
+                        </a>
+                    </div>
+                    <div class="projects__item">
+                        <div class="projects__item-img" style="background-image: url(img/projects/island.jpg);">
+                            <div class="projects__item-inner">
+                                <a href="#" class="projects__item-info">
+                                    <img src="icons/info/info.svg" alt="info">
+                                </a>
+                                <a href="#" class="projects__search-info">
+                                    <img src="icons/info/search.svg" alt="zoom">
+                                </a>
+                            </div>
+                        </div>
+                        <a href="#" class="projects__item-link">
+                            Уникальные туры
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section class="team">
+                <div class="container">
+                    <div class="team__inner">
+                        <img src="img/team/team.jpg" alt="img" class="team__img">
+                        <div class="team__content">
+                            <h2 class="team__title">
+                                Команда
+                            </h2>
+                            <div class="team__text">
+                                Наша команда - это наша самая большая ценность. 
+                                Мы трудились, чтобы собрать группу  экспертов,
+                                чьи навыки дополняют друг друга. 
+                                У членов нашей команды разные истории, но мы разделяем общую страсть к идеалу. Мы верим, чтобы оставаться
+                                профессионалом, нужно развиваться, 
+                                поэтому мы постоянно ищем способы, как стать лучше 
+                                в том, что мы делаем.
+                            </div>
+                            <button class="team__btn">
+                                СМОТРЕТЬ ВИДЕО
+                            </button>
+                        </div>    
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             footer
