add projects section

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                 <div class="container">
                     <div class="services__wrapper">
                         <div class="services__text">
-                            <h2 class="services__title title">
+                            <h2 class="services__title">
                                 Сервис
                             </h2>
                             <div class="services__subtitle">
@@ -229,7 +229,7 @@
                                 <a href="#" class="projects__item-info">
                                     <img src="icons/info/info.svg" alt="info">
                                 </a>
-                                <a href="#" class="projects__search-info">
+                                <a href="#" class="projects__item-zoom">
                                     <img src="icons/info/search.svg" alt="zoom">
                                 </a>
                             </div>
@@ -244,7 +244,7 @@
                                 <a href="#" class="projects__item-info">
                                     <img src="icons/info/info.svg" alt="info">
                                 </a>
-                                <a href="#" class="projects__search-info">
+                                <a href="#" class="projects__item-zoom">
                                     <img src="icons/info/search.svg" alt="zoom">
                                 </a>
                             </div>
@@ -259,7 +259,7 @@
                                 <a href="#" class="projects__item-info">
                                     <img src="icons/info/info.svg" alt="info">
                                 </a>
-                                <a href="#" class="projects__search-info">
+                                <a href="#" class="projects__item-zoom">
                                     <img src="icons/info/search.svg" alt="zoom">
                                 </a>
                             </div>
@@ -274,7 +274,7 @@
                                 <a href="#" class="projects__item-info">
                                     <img src="icons/info/info.svg" alt="info">
                                 </a>
-                                <a href="#" class="projects__search-info">
+                                <a href="#" class="projects__item-zoom">
                                     <img src="icons/info/search.svg" alt="zoom">
                                 </a>
                             </div>
