add team section

--- a/src/index.html
+++ b/src/index.html
@@ -219,69 +219,71 @@
                 </div>
             </section>
             <section class="projects">
-                <h2 class="projects__title">
-                    Наши Проекты
-                </h2>
-                <div class="projects__items">
-                    <div class="projects__item">
-                        <div class="projects__item-img" style="background-image: url(img/projects/lalique.jpg);">
-                            <div class="projects__item-inner">
-                                <a href="#" class="projects__item-info">
-                                    <img src="icons/info/info.svg" alt="info">
-                                </a>
-                                <a href="#" class="projects__item-zoom">
-                                    <img src="icons/info/search.svg" alt="zoom">
-                                </a>
+                <div class="container">
+                    <h2 class="projects__title">
+                        Наши Проекты
+                    </h2>
+                    <div class="projects__items">
+                        <div class="projects__item">
+                            <div class="projects__item-img" style="background-image: url(img/projects/lalique.jpg);">
+                                <div class="projects__item-inner">
+                                    <a href="#" class="projects__item-info">
+                                        <img src="icons/info/info.svg" alt="info">
+                                    </a>
+                                    <a href="#" class="projects__item-zoom">
+                                        <img src="icons/info/search.svg" alt="zoom">
+                                    </a>
+                                </div>
                             </div>
+                            <a href="#" class="projects__item-link">
+                                Lalique бутик
+                            </a>
                         </div>
-                        <a href="#" class="projects__item-link">
-                            Lalique бутик
-                        </a>
-                    </div>
-                    <div class="projects__item">
-                        <div class="projects__item-img" style="background-image: url(img/projects/house.jpg);">
-                            <div class="projects__item-inner">
-                                <a href="#" class="projects__item-info">
-                                    <img src="icons/info/info.svg" alt="info">
-                                </a>
-                                <a href="#" class="projects__item-zoom">
-                                    <img src="icons/info/search.svg" alt="zoom">
-                                </a>
+                        <div class="projects__item">
+                            <div class="projects__item-img" style="background-image: url(img/projects/house.jpg);">
+                                <div class="projects__item-inner">
+                                    <a href="#" class="projects__item-info">
+                                        <img src="icons/info/info.svg" alt="info">
+                                    </a>
+                                    <a href="#" class="projects__item-zoom">
+                                        <img src="icons/info/search.svg" alt="zoom">
+                                    </a>
+                                </div>
                             </div>
+                            <a href="#" class="projects__item-link">
+                                Строительство домов
+                            </a>
                         </div>
-                        <a href="#" class="projects__item-link">
-                            Строительство домов
-                        </a>
-                    </div>
-                    <div class="projects__item">
-                        <div class="projects__item-img" style="background-image: url(img/projects/coffe.jpg);">
-                            <div class="projects__item-inner">
-                                <a href="#" class="projects__item-info">
-                                    <img src="icons/info/info.svg" alt="info">
-                                </a>
-                                <a href="#" class="projects__item-zoom">
-                                    <img src="icons/info/search.svg" alt="zoom">
-                                </a>
+                        <div class="projects__item">
+                            <div class="projects__item-img" style="background-image: url(img/projects/coffe.jpg);">
+                                <div class="projects__item-inner">
+                                    <a href="#" class="projects__item-info">
+                                        <img src="icons/info/info.svg" alt="info">
+                                    </a>
+                                    <a href="#" class="projects__item-zoom">
+                                        <img src="icons/info/search.svg" alt="zoom">
+                                    </a>
+                                </div>
                             </div>
+                            <a href="#" class="projects__item-link">
+                                Кофейня
+                            </a>
                         </div>
-                        <a href="#" class="projects__item-link">
-                            Кофейня
-                        </a>
-                    </div>
-                    <div class="projects__item">
-                        <div class="projects__item-img" style="background-image: url(img/projects/island.jpg);">
-                            <div class="projects__item-inner">
-                                <a href="#" class="projects__item-info">
-                                    <img src="icons/info/info.svg" alt="info">
-                                </a>
-                                <a href="#" class="projects__item-zoom">
-                                    <img src="icons/info/search.svg" alt="zoom">
-                                </a>
+                        <div class="projects__item">
+                            <div class="projects__item-img" style="background-image: url(img/projects/island.jpg);">
+                                <div class="projects__item-inner">
+                                    <a href="#" class="projects__item-info">
+                                        <img src="icons/info/info.svg" alt="info">
+                                    </a>
+                                    <a href="#" class="projects__item-zoom">
+                                        <img src="icons/info/search.svg" alt="zoom">
+                                    </a>
+                                </div>
                             </div>
+                            <a href="#" class="projects__item-link">
+                                Уникальные туры
+                            </a>
                         </div>
-                        <a href="#" class="projects__item-link">
-                            Уникальные туры
-                        </a>
                     </div>
                 </div>
             </section>
