add quote section

--- a/src/index.html
+++ b/src/index.html
@@ -311,6 +311,20 @@
                     </div>
                 </div>
             </section>
+            <section class="quote">
+                <div class="container">
+                    <div class="quote__img">
+                        <img src="icons/quote/quote.svg" alt="quote">
+                    </div>
+                    <div class="quote__text">
+                        Если нужно создавать либо повышать имидж компании, 
+                        то <span class="quote__blue">диджитал-маркетинг</span> является наиболее подходящим
+                    </div>
+                    <div class="quote__author">
+                        - Маргарита Акулич
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             footer
