--- a/src/index.html
+++ b/src/index.html
@@ -327,7 +327,26 @@
             </section>
         </main>
         <footer class="footer">
-            footer
+            <div class="container">
+                <div class="footer__tile">
+                    Мы хотели бы услышать все о вашем проекте.
+                    Свяжись с нами.
+                </div>
+                <div class="footer__social">
+                    <div class="footer__social-item">
+                        <img src="icons/social/facebook.svg" alt="facebook">
+                    </div>
+                    <div class="footer__social-item">
+                        <img src="icons/social/google.svg" alt="Google+">
+                    </div>
+                    <div class="footer__social-item">
+                        <img src="icons/social/twitter.svg" alt="Twitter">
+                    </div>
+                    <div class="footer__social-item">
+                        <img src="icons/social/pinterest.svg" alt="Pinterest">
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
