add adaptive to footer

--- a/src/index.html
+++ b/src/index.html
@@ -328,7 +328,7 @@
         </main>
         <footer class="footer">
             <div class="container">
-                <div class="footer__tile">
+                <div class="footer__title">
                     Мы хотели бы услышать все о вашем проекте.
                     Свяжись с нами.
                 </div>
